--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "D:\\TOOLS\\python2.7.11\\python.exe"
+  "python.pythonPath": "C:\\TOOLS\\python2.7.11\\python.exe",
+  "python.linting.pylintEnabled": false
 }
